# cubeworlds

./: CNAME  Cargo.toml  Dockerfile  LICENSE.MIT  README.md  docker-compose.yml  nixpacks.toml  package-lock.json  package.json
.github/workflows/: static.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: index.css  index.ts  my-element.ts
app/src/components/: CubewaySimulation.ts  cubeway-simulation.ts  index.ts
app/src/services/: SimulationController.ts  index.ts
app/types/components/: cubeway-simulation.d.ts  index.d.ts
cubeway/: Cargo.toml  README.md
cubeway/src/: camera.rs  compute.wgsl  cube.rs  greet.rs  lib.rs  main.rs  shader.wgsl  square_pyramid.rs  texture.rs  util.rs
src/: lib.rs  main.rs
