[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/stevenhuyn/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 's'