[package]
name = "wgpu-hello-wasm"
version = "0.1.0"
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/stevenhuyn/hello-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.16", features = ["webgl"]}
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "1"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[profile.release]
lto = true
opt-level = 's'


 

 