[package]
name = "cubeway"
version = "0.1.0"
edition = "2021"

[lib]
name = "cubeway"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cubeway-native"
path = "src/main.rs"

[profile.release]
# strip = true

# [profile.wasm32-unknown-unknown.profile.release]
# strip = false  # wasm-pack :(

[dependencies]
wasm-bindgen = "0.2"
winit = { version = "0.29", features = ["android-native-activity"] }
cgmath = "0.18"
env_logger = "0.11"
log = "0.4"
wgpu = "25"
cfg-if = "1"
pollster = "0.4"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = "0.25"
anyhow = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}